[gd_scene format=3 uid="uid://bhcsc4won0txa"]

[ext_resource type="Script" uid="uid://cusvhc52y626a" path="res://Scenes/RrecruitSHop/recruit_shop.gd" id="1_avlo7"]
[ext_resource type="Resource" uid="uid://cl03ayn238giq" path="res://Resources/Funds/PlayerWallet.tres" id="2_8k3dn"]
[ext_resource type="PackedScene" uid="uid://cqig7ufwah6je" path="res://Scenes/Inventory/Recruit_inventory.tscn" id="5_jp411"]
[ext_resource type="StyleBox" uid="uid://ci3yyoa54a17w" path="res://Theme/YellowPanel.tres" id="6_xjf37"]
[ext_resource type="Script" uid="uid://bcrnrsyr12m2a" path="res://Scripts/UI/InputScroll.gd" id="7_ensoj"]
[ext_resource type="PackedScene" uid="uid://bnonfp8ywr3vl" path="res://Scenes/Inventory/captain_stat_container.tscn" id="9_n5htp"]
[ext_resource type="AudioStream" uid="uid://c866lg2xo47bl" path="res://Assets/Sounds/workshop.mp3" id="10_s2njy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rs5of"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0

[node name="RecruitShop" type="Control" unique_id=398074188 node_paths=PackedStringArray("Stats", "ShipButtonsParent", "Inv")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_avlo7")
Stats = NodePath("PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2/CaptainStatContainer")
ShipButtonsParent = NodePath("PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer")
PlWaller = ExtResource("2_8k3dn")
Inv = NodePath("PanelContainer/VBoxContainer/HBoxContainer/InputScroll/CharacterInventoryUI")

[node name="PanelContainer" type="PanelContainer" parent="." unique_id=1464941558]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("6_xjf37")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer" unique_id=992835766]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer" unique_id=432730740]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer" unique_id=1531908430]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer" unique_id=1379977091]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("6_xjf37")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer" unique_id=2120448741]
custom_minimum_size = Vector2(112, 0)
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer" unique_id=498202856]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Available Ships"
horizontal_alignment = 1
autowrap_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer" unique_id=1345407154]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_rs5of")
horizontal_scroll_mode = 3
vertical_scroll_mode = 3
script = ExtResource("7_ensoj")
metadata/_custom_type_script = "uid://bcrnrsyr12m2a"

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/ScrollContainer" unique_id=209076296]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Buy" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer" unique_id=1965928851]
layout_mode = 2
text = "Buy"

[node name="Close" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer" unique_id=1067636434]
layout_mode = 2
text = "Close"

[node name="InputScroll" type="ScrollContainer" parent="PanelContainer/VBoxContainer/HBoxContainer" unique_id=1418851758]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 3
vertical_scroll_mode = 3
script = ExtResource("7_ensoj")
metadata/_custom_type_script = "uid://bcrnrsyr12m2a"

[node name="CharacterInventoryUI" parent="PanelContainer/VBoxContainer/HBoxContainer/InputScroll" unique_id=1843118128 instance=ExtResource("5_jp411")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer" unique_id=483839682]
layout_mode = 2
size_flags_horizontal = 3

[node name="CaptainStatContainer" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2" unique_id=1727051882 instance=ExtResource("9_n5htp")]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2" unique_id=207478929]
layout_mode = 2

[node name="Button" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer" unique_id=504506716]
layout_mode = 2
size_flags_horizontal = 3
text = "STATS"

[node name="Button2" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer" unique_id=20245679]
layout_mode = 2
size_flags_horizontal = 3
text = "DECK"

[node name="WorkShopSound" type="AudioStreamPlayer" parent="." unique_id=1351277791]
stream = ExtResource("10_s2njy")
autoplay = true
bus = &"Sounds"

[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/Buy" to="." method="_on_buy_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/Close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
